Routes and OAPI3 spec updates
