# http/router/router.go
@@ -19,6 +19,7 @@ import (
 	"mvrp/http/handler/invoice"
 	"mvrp/http/handler/item"
 	"mvrp/http/handler/sale"
+	"mvrp/http/handler/enum"
 )
 
 func Init() {
@@ -49,6 +50,7 @@ func SetupRoutes(r chi.Router) {
 	r.Get("/", getHome)
 	r.Route("/v1", func(r chi.Router) {
 		r.Route("/main", getMainRoutes())
+		r.Route("/enum", getEnumRoutes())
 	})
 }
 
@@ -263,6 +265,12 @@ func getMainRoutes() func(chi.Router) {
 			
 		})
 		
+    }
+}
+
+func getEnumRoutes() func(chi.Router) {
+    return func(r chi.Router) {
+        r.Get("/", enum.ListEnum)
     }
 }
 
